--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   <div class="tabs">
     <button class="tab" data-tab="noXAI">No XAI</button>
     <button class="tab" data-tab="lime">LIME</button>
-    <button class="tab" data-tab="shap">SHAP</button>
+    <button class="tab" data-tab="dice">DICE</button>
   </div>
   <div id="tabContentContainer">
     <!-- Tab content for No XAI, LIME, SHAP, Counterfactual -->
