--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
                               "down", "in", "out", "on", "off", "over", "under", "again", "further", "then", "once", "here", "there",
                               "when", "where", "why", "how", "all", "any", "both", "each", "few", "more", "most", "other", "some",
                               "such", "no", "nor", "not", "only", "own", "same", "so", "than", "too", "very", "s", "t", "can", "will",
-                              "just", "don", "should", "now"
+                              "just", "don", "should", "now", "12th", "1st", "2nd", "3rd", "4th", "5th", "6th", "7th", "8th", "9th", "10th", "11th"
                             ]);
 
 
