--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,10 @@
 <body>
 <div class="container">
   <h1>Book Recommendation System</h1>
-  <div class="tabs">
+    <div class="tabs">
     <button class="tab" data-tab="noXAI">No XAI</button>
     <button class="tab" data-tab="lime">LIME</button>
-    <button class="tab" data-tab="dice">DICE</button>
+    <button class="tab" data-tab="anchor">Anchor</button>
   </div>
   <div id="tabContentContainer">
     <!-- Tab content for No XAI, LIME, SHAP, Counterfactual -->
