--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,8 @@
       <div id="anchorExplanation">
         <h2>Anchor Explanations for Recommended Books:</h2>
         <p id="anchorExplanationGeneral"> These recommendations are formed using the description of your original book, which was used to search for similar books within the Google Books Repository.
-          The Anchor explanation identifies the most critical features (or "anchors") from the book description that strongly support why the recommendation was made. These anchors represent words or phrases that are most influential in determining the similarity and relevance of this book as a good recommendation. </p>
+          The Anchor explanation identifies the most critical features (or "anchors") from the book description that strongly support why the recommendation was made. These anchors represent words or phrases that are most influential in determining the similarity and relevance of this book as a good recommendation.
+          The precision is a measure of how often the explanation's key features correctly predict the recommendation, expressed as a percentage of accuracy. </p>
         <ul id="anchorExplanationList"></ul>
       </div>
     </div>
