--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
     </div>
     <div id="anchor" class="tab-content" style="display:none;">
       <h2>Anchor Explanation</h2>
-      <p> Please allow a few moments for the explanations to load.</p>
+      <p> Please allow a few moments for the explanations to load. It can take a while. This is normal. An error message will appear if the explanations fail to load.</p>
       <input type="text" id="bookTitleAnchor" placeholder="Enter a book title">
       <div class="toggle-label">
         <input type="checkbox" id="includeSameAuthorAnchor" checked>
